# ECVA

./: .gitignore  Makefile  README.md
Atlas/: Makefile
Atlas/app/: inference.py  run.sh  visualize.py
Atlas/img/: Dockerfile  docker-compose-dev.yml  docker-compose-mesh.yml
Capture/: Makefile
Capture/app/: app  main.py  orb.py  test.py
Capture/img/: Dockerfile  build.sh  docker-compose-dev.yml  docker-compose-run.yml  docker-compose.yml
Capture/wrk/: CMakeLists.txt  Makefile
Capture/wrk/src/: main.cpp
ORB/: Makefile
ORB/app/: main.py
ORB/img/: Dockerfile-dev  Dockerfile-run  build.sh  docker-compose-dev.yml  docker-compose-run.yml  docker-compose.yml
ORB/wrk/: CMakeLists.txt  Makefile
ORB/wrk/src/: main.cpp  test.cpp
